egonlang-core/res/examples/invalid/prefix_expr_negate_bool.eg
-true;
-false;

// out: TypeError: mismatched types: expected type `number` but received `bool`
// out: TypeError: mismatched types: expected type `number` but received `bool`